// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the snapshot 1`] = `
<div>
  <div>
    <nav
      class="navbar navbar-expand-sm navbar-dark bg-faded fixed-top"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        Nucleus Wallet
        <small
          class="release-text"
        >
          beta
        </small>
      </a>
      <button
        aria-label="toggler"
        class="navbar-toggler"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
      >
        <ul
          class="ml-auto navbar-nav"
        >
          <li
            class="sidebar-link nav-item"
          >
            <a
              class="nav-link"
              href="/home"
            >
              Home
            </a>
          </li>
          <li
            class="sidebar-link nav-item"
          >
            <a
              class="nav-link"
              href="/generate"
            >
              Create New Wallet
            </a>
          </li>
          <li
            class="sidebar-link nav-item"
          >
            <a
              class="nav-link"
              href="/send"
            >
              Send ZIL
            </a>
          </li>
          <li
            class="sidebar-link nav-item"
          >
            <a
              class="nav-link"
              href="/faucet"
            >
              ZIL Faucet
            </a>
          </li>
          <span
            class="nav-link"
          >
            <span
              class="network"
            >
              Dev Testnet
            </span>
          </span>
        </ul>
      </div>
    </nav>
  </div>
</div>
`;

exports[`matches the snapshot 2`] = `
<div>
  <div>
    <nav
      class="navbar navbar-expand-sm navbar-dark bg-faded fixed-top"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        Nucleus Wallet
        <small
          class="release-text"
        >
          beta
        </small>
      </a>
      <button
        aria-label="toggler"
        class="navbar-toggler"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
      >
        <ul
          class="ml-auto navbar-nav"
        >
          <li
            class="sidebar-link nav-item"
          >
            <a
              class="nav-link"
              href="/home"
            >
              Home
            </a>
          </li>
          <li
            class="sidebar-link nav-item"
          >
            <a
              class="nav-link"
              href="/generate"
            >
              Create New Wallet
            </a>
          </li>
          <li
            class="sidebar-link nav-item"
          >
            <a
              class="nav-link"
              href="/send"
            >
              Send ZIL
            </a>
          </li>
          <li
            class="sidebar-link nav-item"
          >
            <a
              class="nav-link"
              href="/faucet"
            >
              ZIL Faucet
            </a>
          </li>
          <a
            class="cursor-pointer nav-link"
          >
            Sign Out
          </a>
          <span
            class="nav-link"
          >
            <span
              class="network"
            >
              Dev Testnet
            </span>
          </span>
        </ul>
      </div>
    </nav>
  </div>
</div>
`;
